@@ -3,8 +3,7 @@
 一个面向课程实训的小型数据库系统原型。项目采用“C++ 编译 SQL、Java 执行计划、Java
 存储接口、Web 展示结果”的分层设计，当前已实现从 SQL 脚本到查询结果的完整演示链路。
 
-> 当前版本使用内存记录存储，重点验证执行引擎逻辑；页式存储、缓冲池和重启持久化将由
-> Java 存储系统接入后补齐。
+> 当前版本默认使用 Java 页式持久化存储；目录与记录会在正常关闭后恢复。
 
 ## 架构
 
@@ -18,7 +17,7 @@ Java Web 服务（127.0.0.1）
 C++ SQL 编译器 ── JSON 逻辑执行计划 ──► Java 数据库引擎
                                             │
                                             ▼
-                                RecordStore（当前为内存实现）
+                                PageRecordStore（页、缓冲池、数据文件）
 ```
 
 - C++ 编译器负责 SQL 的词法、语法、语义、逻辑计划和规则优化，并输出 JSON 计划；
@@ -81,12 +80,47 @@ CASE、ALTER TABLE，以及此前的 HAVING、DISTINCT、外连接和约束 DDL�
 
 ## 数据与持久化说明
 
-当前 `InMemoryRecordStore` 在 Java 进程内保存表结构和记录，并为每行分配稳定的
-`RowId`，用于精确 UPDATE 与 DELETE。Web 页面每次“运行全部”都会从空数据库回放完整
-脚本，因此数据不会写入磁盘，也不能跨重启保留。
+默认数据文件为 `data/minidb.db`，同目录的 `.alloc` 文件保存页分配信息。系统目录与
+用户记录均经 BufferPool 写入固定 4 KB 页，行标识编码为页号和槽号；重启后可以直接执行
+查询或写入。`-Dminidb.data.path=...`、`-Dminidb.buffer.frames=...` 和
+`-Dminidb.buffer.policy=FIFO` 可改变路径、缓冲帧数和替换策略。运行
+`java -jar minidb-engine.jar reset` 会显式清除默认数据文件。
 
-存储系统接入后，将实现页号/槽号形式的 RowId 映射、记录序列化、页读写、缓冲池和
-持久化 Catalog。
+## 验收状态与评分准备
+
+**当前结论：**系统的核心功能已经较完整，能够演示 SQL 编译、Java 执行、页式持久化、
+Web 和 EXPLAIN ANALYZE；但不能声明“全部验收通过”。按《大型平台软件设计实习评分-2026》
+的要求，C++ 的 `parser_tests` 和 `scaffold_smoke` 仍会段错误，必须优先修复。
+
+| 评分项 | 当前情况 | 结论 |
+| --- | --- | --- |
+| SQL 编译器，16 分 | 词法、语法、语义、Catalog、JSON 计划均有实现；支持基础 DDL/DML 与 JOIN、聚合、子查询、集合、CASE、ALTER、EXPLAIN ANALYZE。 | 功能范围较完整，但 `parser_tests` 段错误，不能称全绿。 |
+| 存储系统，12 分 | 4 KB 页、磁盘文件、页分配/释放、LRU/FIFO、dirty/pin、PageGuard、重启读写、B+ 树自测均已覆盖。 | 基本完成。 |
+| 数据库系统，12 分 | SeqScan/Filter/Insert/Update/Delete、目录与记录持久化、CLI、Web、C++ 到 JSON 到 Java 的链路均已实现。 | 基本完成。 |
+| 模块完成度，15 分 | 代码、边界处理、测试和接口衔接较完整。 | 受 C++ 段错误影响，不宜按满分准备。 |
+| 创新，10 分 | 高级 SQL、规则优化、EXPLAIN ANALYZE、Web 与缓存统计、B+ 树均可作为创新点。 | 有较大展示和拿分空间。 |
+| 实验报告，10 分 | 尚未提供报告成品。 | 必须补齐个人模块、测试证据和问题总结。 |
+
+已确认通过的回归包括 Java 基础引擎、页式 `PageRecordStore`、存储自测（含 B+ 树重启）和
+Web API。Web 默认运行于持久化模式。C++ 的 Debug `ctest` 当前为 11 项中 9 项通过，失败项为
+`parser_tests` 与 `scaffold_smoke`，两者均以段错误退出。
+
+### 当前仍属部分完成的边界
+
+- 未实现断电或崩溃恢复；当前保证正常关闭后的持久化，不包含 WAL。
+- B+ 树是独立存储能力，尚未接入 `CREATE INDEX`、优化器选择和 `IndexScan`；不能称为“SQL 已使用索引”。
+- 记录扩容更新会迁移记录，RowId 不保证稳定；索引接入前需先解决该问题。
+- Maven 默认跳过许多以可执行 `main` 形式编写的测试；验收应使用统一脚本显式运行 C++、Java、存储和 Web 测试。
+
+### 答辩优先级
+
+1. 修复 `parser_tests`、`scaffold_smoke` 的段错误，使 C++ Debug `ctest` 达到 11/11 通过。
+2. 增加一键验收脚本，运行 C++ CTest、Java 引擎/存储/Web 测试、持久化重启验证和 Web 演示 SQL。
+3. 如有时间，优先把 B+ 树接入 SQL：`CREATE INDEX`、写入维护、等值/范围 `IndexScan`，并在 `EXPLAIN ANALYZE` 展示它。
+4. 时间不足时，优先展示谓词下推和列裁剪的优化前后扫描行数与耗时，不建议冒险增加 WAL。
+
+答辩可主打高级 SQL 全链路、页式持久化、LRU/FIFO、EXPLAIN ANALYZE、规则优化和 Web 可视化；
+不要声称已实现事务、并发、WAL 或 SQL 索引扫描。
 
 ## 项目结构
 
@@ -110,11 +144,21 @@ Java 引擎与 Web 服务均有无第三方依赖的测试：
 cd E:\MiniDB\minidb-engine
 mvn '-Dmaven.repo.local=target/maven-repo' test-compile
 java --add-modules jdk.httpserver -ea -cp "target/classes;target/test-classes" minidb.EngineTest
+java --add-modules jdk.httpserver -ea -cp "target/classes;target/test-classes" minidb.PageRecordStoreTest
+java --add-modules jdk.httpserver -ea -cp "target/classes;target/test-classes" minidb.storage.StorageSelfTest
 java --add-modules jdk.httpserver -ea -cp "target/classes;target/test-classes" minidb.WebServerTest
 ```
 
-C++ 编译器在 `DBcompiler-main` 下运行 `bash scripts/check.sh`，会同时验证全部编译器测试、
-基础 JSON 计划和 JOIN/GROUP/ORDER JSON 节点导出。
+C++ 编译器在 `DBcompiler-main` 下运行以下命令：
+
+```powershell
+cmake --build .\build --config Debug
+ctest --test-dir .\build -C Debug --output-on-failure
+```
+
+当前 CTest 有两项已知段错误，命令会以失败状态退出；修复前不得将它作为“全部通过”的证据。
+Java 的测试中也有一部分以可执行 `main` 形式存在，Maven 的 Surefire 默认跳过它们，因此必须
+显式运行上述四个 Java 命令。
 
 Linux/WSL 下可运行跨语言高级查询回归：
 
@@ -140,7 +184,5 @@ EXPLAIN 的包装结构、采样点和演示脚本见 [EXPLAIN ANALYZE 实现讲
 
 ## 后续工作
 
-1. 接入 Java 页式存储系统，实现页分配、读写与 Row/Page 映射。
-2. 将系统目录持久化为特殊表，使表定义能够跨重启恢复。
-3. 接入缓冲池与 LRU/FIFO 替换策略，补齐命中统计和页替换日志。
-4. 添加聚合函数内部 DISTINCT，并为连接和分组增加可替换的物理执行算法。
+1. 添加聚合函数内部 DISTINCT，并为连接和分组增加可替换的物理执行算法。
+2. 为持久化 DDL 与多页写入增加 WAL 和断电恢复。
